--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,3 @@
-<div class="logout-container">
+<div class="logout-container" *ngIf="isLogged">
   <button (click)="onLogoutClick()">Logout</button>
 </div>
