--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,26 +1,22 @@
-<div class="login-container">
-  <h2>Login</h2>
-  <form (submit)="onLogin()">
-    <div>
-      <label for="username">Username:</label>
-      <input
-        type="text"
-        id="username"
-        [(ngModel)]="username"
-        name="username"
-        required
-      />
-    </div>
-    <div>
-      <label for="password">Password:</label>
-      <input
-        type="password"
-        id="password"
-        [(ngModel)]="password"
-        name="password"
-        required
-      />
-    </div>
-    <button type="submit">Login</button>
-  </form>
-</div>
+<mat-card class="login-form">
+  <mat-card-header>
+    <mat-card-title>Login</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form (submit)="onLogin()">
+      <p>
+        <mat-form-field>
+          <mat-label>Usuario</mat-label>
+          <input matInput name="username" [(ngModel)]="username" required />
+        </mat-form-field>
+      </p>
+      <p>
+        <mat-form-field>
+          <mat-label>Contraseña</mat-label>
+          <input matInput name="password" [(ngModel)]="password" required />
+        </mat-form-field>
+      </p>
+      <button mat-raised-button>Ingresar</button>
+    </form>
+  </mat-card-content>
+</mat-card>
