--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,6 +4,12 @@
       <div class="flex justify-between items-center">
         <h1 class="text-2xl font-semibold text-gray-900">Angular Routing</h1>
         <button
+          [routerLink]="['/admin']"
+          class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded"
+        >
+          Admin
+        </button>
+        <button
           *ngIf="isLogged"
           (click)="onLogout()"
           class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded"
